Fix text overflow

--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -35,4 +35,5 @@
   justify-content: center;
   align-items: center;
   font-size: 1.125em;
+  word-break: break-word;
 }
